<resources>
    <string name="app_name">Ordering App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="one_burger">One Burger</string>
    <string name="six_burger">Six Burgers</string>
    <string name="twelve_burger">Twelve Burgers</string>
    <string name="choose_flavor">Choose Flavor</string>
    <string name="vanilla">Potato Burger</string>
    <string name="chocolate">Cheese Burger</string>
    <string name="red_velvet">Double patty burger</string>
    <string name="salted_caramel">Chicken burger</string>
    <string name="coffee">Grilled Chicken</string>
    <string name="special_flavor">Special Flavor</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="flavor">Flavor</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">Quantity: %1$s cupcakes \n Flavor: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
</resources>