<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FlavorFragment">
    <data>
        <variable
            name="viewModel"
            type="com.example.orderingapp.OrderViewModel" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/side_margin">



        <TextView
            android:id = "@+id/vegetarian"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:textSize="40sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"

            android:text="Vegetarian"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/flavor_options"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/vegetarian"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/vanilla"
                android:checked="@{viewModel.flavor.equals(@string/vanilla)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/vanilla)"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vanilla" />

            <RadioButton
                android:id="@+id/chocolate"
                android:checked="@{viewModel.flavor.equals(@string/chcoclate)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/chocolate)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate" />

            <RadioButton
                android:id="@+id/red_velvet"
                android:checked="@{viewModel.flavor.equals(@string/red_velvet)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/red_velvet)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_velvet" />
        </RadioGroup>


        <TextView
            android:id="@+id/nonvegetarian"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="Non - Vegetarian"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"

            android:textSize="40sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flavor_options" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/flavor_optionss"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/nonvegetarian"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/salted_caramel"
                android:checked="@{viewModel.flavor.equals(@string/salted_caramel)}"

                android:onClick="@{() -> viewModel.setFlavor(@string/salted_caramel)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salted_caramel" />

            <RadioButton
                android:id="@+id/coffee"
                android:checked="@{viewModel.flavor.equals(@string/coffee)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/coffee)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee" />


        </RadioGroup>
        <View
            android:id="@+id/divider"

            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/side_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flavor_optionss" />
        <TextView
            android:id="@+id/subtotal"
            android:text="@{@string/subtotal_price(viewModel.price)}"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:text="Subtotal ₹0"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/next_button"
            android:onClick="@{() -> flavorFragment.goToNextScreen()}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtotal"
            app:backgroundTint="#8E6F11"/>




    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
    </layout>