<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".StartFragment">
    <data>
        <variable
            name="startFragment"
            type="com.example.orderingapp.StartFragment" />
    </data>
    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Order Burger"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"

                android:textSize="40sp"

                />






            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin ="10dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:src="@drawable/burger"

                />


            <Button
                android:id="@+id/order_one_burger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:onClick="@{() -> startFragment.orderBurger(1)}"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_cupcake_button_width"
                android:text="@string/one_burger"
                app:backgroundTint="#8E6F11" />

            <Button
                android:id="@+id/order_six_burger"
                android:onClick="@{() -> startFragment.orderBurger(6)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_cupcake_button_width"
                android:text="@string/six_burger"
                app:backgroundTint="#8E6F11"/>

            <Button
                android:id="@+id/order_twelve_burger"
                android:onClick="@{() -> startFragment.orderBurger(12)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_cupcake_button_width"
                android:text="@string/twelve_burger"
                app:backgroundTint="#8E6F11"/>






        </LinearLayout>

    </ScrollView>
</layout>